Fix display error in dashboard -> group page when tagline is too long

--- a/app/assets/stylesheets/modules/modules/_admin_group.scss
+++ b/app/assets/stylesheets/modules/modules/_admin_group.scss
@@ -18,13 +18,22 @@
     display: inline-block;
   }
 
+  .group-profile {
+    display: table;
+  }
+
   .group-image {
-    margin-right: 10px;
-    float: left;
+    padding-right: 10px;
+    display: table-cell;
+    vertical-align: top;
+  }
+
+  .group-right {
+    display: table-cell;
+    vertical-align: top;
   }
 
   .group-information {
-    float: left;
   }
 
   .collections-list {
